# lnxsystems-hosts

./: .awx.yml.swp  .gitmodules  README.md  alpha.lnxsystems.com.yml  ansible.cfg  awx.lnxsystems.com.yml  awx.yml  gitlab.lnxsystems.com.yml  infra-1.lnxsystems.com  inventory  kube-1.lnxsystems.com.yml  kube-2.lnxsystems.com.yml  kube-3.lnxsystems.com.yml  kube-template.lnxsystems.com.yml  kube.yml  localhost.yml  minio.lnxsystems.com.yml  mysql.yml  pgdg.lnxsystems.com.yml  pyproject.toml  script.sh
aks.lab/: ansible.cfg  inventory  k3s-agent-node.yml  k3s-server-node.yml  k3s.yml
kube/: inventory
manifests/: values.yml
manifests/awx/: .README.md.swp  .ansible.yml.swp  README.md  ansible.yml
manifests/dashboard/: README.md
manifests/httpd/: .http.yaml.swp  httpd.yml  index.html
manifests/prometheus/: bundle.yaml
scripts/: add_module
