[tool.poetry]
name = "lnxsystems"
version = "0.1.0"
description = ""
authors = ["jason.viloria <jason.viloria@optiscangroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
